--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Web studio" />
-    <title>Document</title>
+    <title>Web studio</title>
   </head>
   <body>
     <!-- Section Navigation -->
