--- a/index.html
+++ b/index.html
@@ -9,25 +9,33 @@
   <body>
     <!-- Section Navigation -->
     <header>
-      <section>
-        <a href="./index.html"><span>WEB</span>STUDIO</a>
-        <nav>
-          <ul>
-            <li><a href=""></a>Studio</li>
-            <li><a href=""></a>Portfolio</li>
-            <li><a href=""></a>Contacts</li>
-          </ul>
-        </nav>
-        <address>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:++110001111111">+11 (000) 111-11-11</a>
-        </address>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-      </section>
+      <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li>
+            <a href="">Studio</a>
+          </li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <!-- /Section Navigation -->
     <main>
+<section>
+  <h1>Effective Solutions for Your Business</h1>
+  <button type="button">Order Service</button>
+</section>
       <!--Section  Mission-->
       <section>
         <h2 hidden>Mission</h2>
@@ -113,7 +121,7 @@
     </main>
     <!--Section footer-->
     <footer>
-      <a href="./index.html"><span>WEB</span>STUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
